--- a/Develop/index.html
+++ b/Develop/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="wrapper">
@@ -22,13 +23,26 @@
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></textarea>
+          >
+          </textarea>
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+
+            <div id="settings">
+              <label for="length">Length</label>
+              <input type="number" id="length" value="16" min="8" max="128" />    
+              <label for="numbers">Include Numbers</label>
+              <input type="checkbox" id="numbers" checked />
+              <label for="symbols">Include Symbols</label>
+              <input type="checkbox" id="symbols" checked />
+            </div>
+          </div>
+
+
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    
   </body>
 </html>
